--- a/unit-tests/pom.xml
+++ b/unit-tests/pom.xml
@@ -82,6 +82,12 @@
             <version>1.7.25</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <testSourceDirectory>src/test/groovy</testSourceDirectory>
